test/tests/node/secrets/resolution_failure.txt
error: could not get secret value: no platform configured
 --> tests/node/secrets/resolution_failure.tql:9:22
  |
9 | assert_secret secret=secret("does-not-exist"), expected="nothing"
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^ secret `does-not-exist` failed
  |
